--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,16 @@
         "titleBar.inactiveForeground": "#e7e7e799",
         "commandCenter.border": "#e7e7e799"
     },
-    "peacock.color": "#dd0531"
+    "peacock.color": "#dd0531",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[javascript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
+      "editor.formatOnSave": true,
+      // Set the default
+
+        // Enable per-language
+        "[javascript]": {
+            "editor.formatOnSave": true
+        }
+    }
 }
