new landing page

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "react-share": "^4.4.0",
     "@glidejs/glide": "^3.5.2",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.5",
+    "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
@@ -23,28 +23,32 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@unlock-protocol/unlock-js": "^0.26.1",
+    "airtable": "^0.11.4",
+    "amplitude-js": "^8.18.4",
     "axios": "^0.27.2",
     "ethers": "^5.6.9",
+    "firebase": "^9.8.3",
     "ipfs-http-client": "^57.0.3",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-excel-renderer": "^1.1.0",
+    "react-firebaseui": "^6.0.0",
     "react-helmet": "^6.1.0",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
     "react-use": "^17.4.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
-    "web3modal": "^1.9.8",
-    "@react-firebase/auth": "^0.2.10",
-    "firebase": "^9.8.3",
-    "amplitude-js": "^8.18.4"
+    "web3modal": "^1.9.8"
   },
   "scripts": {
     "start": "react-scripts start",
