--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@glidejs/glide": "^3.5.2",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.5",
@@ -23,11 +26,17 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@unlock-protocol/unlock-js": "^0.26.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.14",
     "airtable": "^0.11.4",
+    "alchemy-sdk": "^2.0.4",
     "amplitude-js": "^8.18.4",
     "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "firebase": "^9.8.3",
+    "framer-motion": "^7.3.2",
     "ipfs-http-client": "^57.0.3",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
